--- a/package.json
+++ b/package.json
@@ -9,21 +9,36 @@
     "lite": "lite-server",
     "scss": "node-sass -o css/ css/",
     "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
-    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
+    "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\"",
+    "clean": "rimraf dist",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin img/* --out-dir=\"dist/img\"",
+    "usemin": "usemin contactus.html -d dist --htmlmin -o dist/contactus.html && usemin aboutus.html -d dist --htmlmin -o dist/aboutus.html && usemin index.html -d dist --htmlmin -o dist/index.html",
+    "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copyfiles": "^2.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "imagemin-cli": "^5.1.0",
     "lite-server": "^2.3.0",
     "node-sass": "^7.0.1",
-    "onchange": "^3.3.0",
-    "parallelshell": "^3.0.1"
+    "onchange": "^7.0.0",
+    "parallelshell": "3.0.1",
+    "rimraf": "^3.0.2",
+    "usemin-cli": "^0.6.0"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
+    "cssmin": "^0.4.3",
     "font-awesome": "^4.7.0",
+    "htmlmin": "^0.0.7",
+    "imagemin": "^8.0.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "usemin": "^0.6.0",
+    "uuid": "^3.4.0"
   }
 }
