--- a/package.json
+++ b/package.json
@@ -20,14 +20,20 @@
   "license": "ISC",
   "devDependencies": {
     "copyfiles": "^2.2.0",
+    "grunt": "^1.4.1",
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-sass": "^3.1.0",
     "gulp-htmlmin": "^5.0.1",
-    "imagemin-cli": "^5.1.0",
+    "imagemin-cli": "^7.0.0",
+    "jit-grunt": "^0.10.0",
     "lite-server": "^2.3.0",
     "node-sass": "^7.0.1",
     "onchange": "^7.0.0",
     "parallelshell": "3.0.1",
     "rimraf": "^3.0.2",
-    "usemin-cli": "^0.6.0"
+    "time-grunt": "^2.0.0",
+    "usemin-cli": "^0.0.7"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
